Update asset_category_tutorial.ipynb, assets_tutorial.ipynb, create_portfolio_with_agent.ipynb, and 6 more files

--- a/examples/markets/assets/asset_category_tutorial.ipynb
+++ b/examples/markets/assets/asset_category_tutorial.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Asset Category Management Tutorial\n\n",
-    "This Jupyter Notebook provides a step-by-step guide on how to manage `AssetCategory` using the `mainsequence.vam_client` library. We will cover:\n\n",
+    "### Asset Category Management Tutorial\n",
+    "\n",
+    "This Jupyter Notebook provides a step-by-step guide on how to manage `AssetCategory` using the `mainsequence.vam_client` library. We will cover:\n",
+    "\n",
     "1. **Fetching Specific Assets for Different Execution Venues** (Binance for Crypto & Alpaca for US Stocks)\n",
     "2. **Creating Asset Categories**\n",
     "3. **Reading Existing Categories**\n",
@@ -15,12 +17,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T11:23:17.343441Z",
      "start_time": "2025-04-10T11:23:15.787651Z"
     }
    },
+   "outputs": [],
    "source": [
     "# Import necessary modules\n",
     "import dotenv\n",
@@ -31,9 +35,7 @@
     "from mainsequence.client import Asset, AssetCategory\n",
     "from mainsequence.client import CONSTANTS\n",
     "\n"
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
@@ -44,12 +46,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T11:23:20.235808Z",
      "start_time": "2025-04-10T11:23:19.375513Z"
     }
    },
+   "outputs": [],
    "source": [
     "# Select specific crypto assets from Binance\n",
     "crypto_symbols = [\"BTCUSDT\", \"ETHUSDT\", \"SOLUSDT\"]\n",
@@ -62,21 +66,19 @@
     "# Extract asset IDs\n",
     "crypto_asset_ids = [asset.id for asset in binance_crypto_assets]\n",
     "stock_asset_ids = [asset.id for asset in alpaca_us_stocks]"
-   ],
-   "outputs": [],
-   "execution_count": 2
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-27T13:00:14.529486Z",
      "start_time": "2025-02-27T13:00:14.528195Z"
     }
    },
-   "cell_type": "code",
-   "source": "",
    "outputs": [],
-   "execution_count": null
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -86,40 +88,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T10:15:24.662078Z",
      "start_time": "2025-04-10T10:09:52.138910Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "from mainsequence.client import User\n",
     "#get authenticated user to extract its organization and query if the categories already exists\n",
     "user=User.get_authenticated_user_details()\n",
     "org_uid = user.organization.uid  # "
-   ],
-   "outputs": [],
-   "execution_count": 6
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T10:16:01.011077Z",
      "start_time": "2025-04-10T10:16:00.180770Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "# Check if the \"Favorite Crypto\" category exists\n",
-    "crypto_asset_ids = []\n",
-    "crypto_category = AssetCategory.filter(organization_owner_uid=org_uid, display_name=\"Favorite Crypto\")\n",
-    "if len(crypto_category)==0:\n",
-    "    crypto_category = AssetCategory.create(display_name=\"Favorite Crypto\", source=\"user_defined\", assets=crypto_asset_ids)\n",
-    "    print(f\"Created Categories: Crypto: {crypto_category}\")\n",
-    "else:\n",
-    "    crypto_category=crypto_category[0]"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -129,16 +122,35 @@
      ]
     }
    ],
-   "execution_count": 7
+   "source": [
+    "# Check if the \"Favorite Crypto\" category exists\n",
+    "crypto_asset_ids = []\n",
+    "crypto_category = AssetCategory.filter(organization_owner_uid=org_uid, display_name=\"Favorite Crypto\")\n",
+    "if len(crypto_category)==0:\n",
+    "    crypto_category = AssetCategory.create(display_name=\"Favorite Crypto\", source=\"user_defined\", assets=crypto_asset_ids)\n",
+    "    print(f\"Created Categories: Crypto: {crypto_category}\")\n",
+    "else:\n",
+    "    crypto_category=crypto_category[0]"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-27T13:00:14.977530Z",
      "start_time": "2025-02-27T13:00:14.669202Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Categories: Crypto: orm_class='AssetCategory' id=458 unique_id='1a3dca4d-f5eb-439c-9522-cb6ff9c962fd' name='Favorite Crypto' source='user_defined' assets=[11440, 12419, 11439] organization_owner_uid='00000000-0000-0000-0000-000000000001'\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Check if the \"Favorite US Stocks\" category exists\n",
@@ -149,29 +161,19 @@
     "else:\n",
     "    stocks_category=stocks_category[0]\n",
     "    \n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created Categories: Crypto: orm_class='AssetCategory' id=458 unique_id='1a3dca4d-f5eb-439c-9522-cb6ff9c962fd' name='Favorite Crypto' source='user_defined' assets=[11440, 12419, 11439] organization_owner_uid='00000000-0000-0000-0000-000000000001'\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-27T13:00:14.983985Z",
      "start_time": "2025-02-27T13:00:14.982673Z"
     }
    },
-   "cell_type": "code",
-   "source": "",
    "outputs": [],
-   "execution_count": null
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -182,16 +184,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T10:19:31.347404Z",
      "start_time": "2025-04-10T10:19:30.396899Z"
     }
    },
-   "source": [
-    "existing_categories = AssetCategory.filter()\n",
-    "print(f\"Existing Categories: {existing_categories}\")"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -201,7 +200,10 @@
      ]
     }
    ],
-   "execution_count": 8
+   "source": [
+    "existing_categories = AssetCategory.filter()\n",
+    "print(f\"Existing Categories: {existing_categories}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,12 +214,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T10:19:46.064684Z",
      "start_time": "2025-04-10T10:19:44.956697Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Crypto Category: orm_class='AssetCategory' id=53 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[193084] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n",
+      "[193084]\n"
+     ]
+    }
+   ],
    "source": [
     "# Fetch additional assets (for example, adding ADAUSDT)\n",
     "new_crypto_asset = Asset.filter(symbol=\"ADAUSDT\", execution_venue__symbol=CONSTANTS.BINANCE_EV_SYMBOL)\n",
@@ -230,18 +243,7 @@
     "\n",
     "print(f\"Updated Crypto Category: {crypto_category}\")\n",
     "print(crypto_category.assets)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated Crypto Category: orm_class='AssetCategory' id=53 unique_identifier='favorite_crypto' display_name='Favorite Crypto' source='user_defined' assets=[193084] organization_owner_uid='00000000-0000-0000-0000-000000000001' description=None\n",
-      "[193084]\n"
-     ]
-    }
-   ],
-   "execution_count": 9
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,16 +254,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-27T13:00:16.271288Z",
      "start_time": "2025-02-27T13:00:16.160139Z"
     }
    },
-   "source": [
-    "stocks_category.delete()\n",
-    "print(f\"Deleted category: Favorite US Stocks\")"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -271,7 +270,10 @@
      ]
     }
    ],
-   "execution_count": 7
+   "source": [
+    "stocks_category.delete()\n",
+    "print(f\"Deleted category: Favorite US Stocks\")"
+   ]
   },
   {
    "cell_type": "markdown",
